<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>fr.unice.polytech</groupId>
		<artifactId>droneexpress</artifactId>
		<version>1.0-SNAPSHOT</version>
	</parent>
	
	<artifactId>droneexpress.optimizer</artifactId>
	<packaging>war</packaging>
	<version>1.0</version>
	<name>droneexpress-optimizer</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<!-- Repository for maven j2ee last SNAPSHOT -->
		<repository>
			<id>apache-m2-snapshot</id>
			<name>Apache Snapshot Repository</name>
			<url>https://repository.apache.org/content/groups/snapshots</url>
		</repository>
	</repositories>


	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.shrinkwrap.resolver</groupId>
				<artifactId>shrinkwrap-resolver-bom</artifactId>
				<version>2.1.1</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>1.1.10.Final</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- DroneExpress Common Librairy -->
		<dependency>
			<groupId>fr.unice.polytech</groupId>
			<artifactId>droneexpress.common</artifactId>
			<version>1.0</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.openejb</groupId>
			<artifactId>javaee-api</artifactId>
			<version>6.0-2</version>
			<scope>provided</scope>
		</dependency>

		<!-- Dependencies for testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.openejb</groupId>
			<artifactId>arquillian-tomee-embedded</artifactId>
			<version>1.7.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.openejb</groupId>
			<artifactId>openejb-core</artifactId>
			<version>4.7.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.openejb</groupId>
			<artifactId>tomee-embedded</artifactId>
			<version>1.7.2</version>
			<scope>test</scope>
		</dependency>
		<!-- Jackson -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.6.3</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.6.2</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20150729</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>droneexpress-optimizer</finalName>
		<defaultGoal>package</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<reuseForks>false</reuseForks> <!-- otherwise openejb embedded and tomee embedded shares the same context 
						and EJBContainer is broken -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.openejb.maven</groupId>
				<artifactId>tomee-maven-plugin</artifactId>
				<version>1.7.2</version>
				<configuration>
					<tomeeClassifier>plus</tomeeClassifier>
					<args>-Xmx512m -XX:PermSize=256m</args>
					<!--context>ROOT</context -->
					<deployOpenEjbApplication>true</deployOpenEjbApplication>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.openjpa</groupId>
				<artifactId>openjpa-maven-plugin</artifactId>
				<version>2.4.0</version>
				<configuration>
					<includes>**/entities/*.class</includes>
					<excludes>**/entities/XML*.class</excludes>
					<addDefaultConstructor>true</addDefaultConstructor>
					<enforcePropertyRestrictions>true</enforcePropertyRestrictions>
				</configuration>
				<!--executions> <execution> <id>enhancer</id> <phase>process-classes</phase> 
					<goals> <goal>enhance</goal> </goals> </execution> </executions -->
				<dependencies>
					<dependency>
						<groupId>org.apache.openjpa</groupId>
						<artifactId>openjpa</artifactId>
						<version>2.4.0</version> <!-- set the version to be the same as the level in your runtime -->
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

</project>
